test/fail_compilation/fail4082b.d
struct Foo {
    ~this() { throw new Exception(""); }
}
nothrow void b(Foo t) {}
